# yaml-include

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md
data/: expected.yml  root.yml
data/circular/: a.yml  b.yml  c.yml  expected.yml
data/edge/: hello.yml  stuff.yml  world.yml
data/sample/: file_a.yml  file_b.yml  file_c.txt  file_e.json  main.yml
data/simple/: expected.json  expected.yml  other.json  root.yml
data/simple/nested/: a.yml  b.yml  c.yml  d.yml
examples/: README.md
examples/_expected_outputs/: deep_include.yml  glob.yml  sample.yml
examples/circular_error/: included.yml  main.yml
examples/deep_include/: main.yml
examples/deep_include/simple/: doc.md  other.json  whatever.txt
examples/glob/: main.yml
examples/glob/databases/: postgres.yml
examples/glob_ignored_local_yaml/: main.yml
examples/glob_ignored_local_yaml/databases/: all.yml  mysql.yml
examples/sample/: file_d.md  main.yml
lib/: Cargo.toml
lib/src/: errors.rs  glob.rs  helpers.rs  lib.rs  public.rs  transformer.rs
src/: flattener.rs  helpers.rs  lib.rs  main.rs  transformer.rs
