[package]
name = "yaml-include"
version = "0.6.0"
edition = "2021"
authors = ["Merleur l'enchantin <le.neko@gmail.com>"]
license = "GPL-3.0"
description = "A simple cli that output to stdout recursively included data from a yaml file path"
readme = "README.md"
repository = "https://github.com/leNEKO/yaml-include"
keywords = ['cli', 'yaml', 'include']

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.0", features = ["derive"] }
regex = "1.8.3"
serde_yaml = "0.9.21"
yaml-rust = "0.4.5"
