[workspace]
members = ["lib", "bin"]
default-members = ["bin", "lib"]
resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Merleur l'enchantin <le.neko@gmail.com>"]
license = "GPL-3.0"
description = "A lib and a CLI for recursively parsing \"!include\" data in yaml files"
readme = "README.md"
repository = "https://github.com/leNEKO/yaml-include"
keywords = ['cli', 'yaml', 'include', 'lib']

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"