[package]
name = "yaml-include"
version = "0.7.1"
edition = "2021"
authors = ["Merleur l'enchantin <le.neko@gmail.com>"]
license = "GPL-3.0"
description = "A lib and a CLI for recursively parsing \"!include\" data in yaml files"
readme = "README.md"
repository = "https://github.com/leNEKO/yaml-include"
keywords = ['cli', 'yaml', 'include', 'lib']

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.0", features = ["derive"] }
serde_yaml = "0.9.21"
